<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:item="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="24dp"
    android:backgroundTint="@color/ui_bg_surface"
    android:orientation="vertical"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="RtlSymmetry">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp">

        <ImageView
            android:id="@+id/mainIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/app_name"
            android:textColor="@color/ui_fg_secondary"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/mainIcon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.refoler.app.ui.utils.PrefsCard
        android:id="@+id/accountAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        item:cardDescription="@string/nav_desc_account"
        item:cardIconDrawable="@drawable/ic_fluent_person_24_regular"
        item:cardTitle="@string/nav_title_account"
        item:cardType="title|description|icon" />

    <com.refoler.app.ui.utils.PrefsCard
        android:id="@+id/settingsAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        item:cardDescription="@string/nav_desc_settings"
        item:cardIconDrawable="@drawable/ic_fluent_settings_24_regular"
        item:cardTitle="@string/nav_title_settings"
        item:cardType="title|description|icon" />

    <com.refoler.app.ui.utils.PrefsCard
        android:id="@+id/appInfoAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        item:cardDescription="@string/nav_desc_info"
        item:cardIconDrawable="@drawable/ic_info_outline_black_24dp"
        item:cardTitle="@string/nav_title_info"
        item:cardType="title|description|icon" />
</LinearLayout>