<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:item="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.refoler.app.ui.utils.PrefsCard
            android:id="@+id/fileNameItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            item:cardType="title|description|icon"
            item:cardTitle="@string/refoler_detail_data_name"
            item:cardDescription="Unknown"
            item:cardIconAlignEnd="true"
            item:cardIconDrawable="@drawable/ic_fluent_document_24_regular"/>

        <com.refoler.app.ui.utils.PrefsCard
            android:id="@+id/filePathItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            item:cardType="title|description"
            item:cardTitle="@string/refoler_detail_data_path"
            item:cardDescription="Unknown" />

        <com.refoler.app.ui.utils.PrefsCard
            android:id="@+id/fileDateItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            item:cardType="title|description"
            item:cardTitle="@string/refoler_detail_data_date"
            item:cardDescription="Unknown" />

        <com.refoler.app.ui.utils.PrefsCard
            android:id="@+id/fileSizeItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            item:cardType="title|description"
            item:cardTitle="@string/refoler_detail_data_size"
            item:cardDescription="Unknown" />

        <com.refoler.app.ui.utils.PrefsCard
            android:id="@+id/filePermissionItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            item:cardType="title|description"
            item:cardTitle="@string/refoler_detail_data_permission"
            item:cardDescription="Unknown" />

        <com.refoler.app.ui.utils.PrefsCard
            android:id="@+id/fileHashItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            item:cardType="title|description"
            item:cardTitle="@string/refoler_detail_data_hash"
            item:cardDescription="Click here to get file hash" />

        <LinearLayout
            android:id="@+id/waringLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/ic_info_outline_black_24dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/waringText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/sans"
                android:textColor="@color/ui_fg_secondary"
                tools:text="PlaceHolder" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>